src/wpzoom-blocks/recipe-card/style.scss
/**
 * #.# Styles
 *
 * CSS for both Frontend+Backend.
 */

.wp-block-wpzoom-recipe-card-block-recipe-card {
    max-width: 750px;

    &.recipe-card-noimage {
        .recipe-card-image {
            display: none;
        }
    }
	&.header-content-align-left {
		.recipe-card-heading {
			text-align: left;
		}
	}
	&.header-content-align-center {
		.recipe-card-heading {
			text-align: center;
		}
	}
	&.header-content-align-right {
		.recipe-card-heading {
			text-align: right;
		}
	}
	.recipe-card-heading {
		.recipe-card-author {
			margin-bottom: 10px;
		}
		.recipe-card-title + p {
			margin-bottom: 0;
		}

		@include clear-after;
	}
	.recipe-card-image figure img {
		width: 100%;
	}
	.recipe-card-video {
        margin-top: 20px;
        margin-bottom: 20px;
        video {
            max-width: 100%;
        }
        [poster] {
            object-fit: cover;
        }
     }
	.recipe-card-details {
		margin-bottom: 15px;
		clear: both;
		.detail-item {
			> p:not(.detail-item-label):not(.detail-item-value):not(.detail-item-unit) {
				display: none;
			}
			.detail-item-label {
				margin-bottom: 5px;
			}
			.detail-item-unit {
				margin-bottom: 0;
			}
            .detail-item-adjustable-servings {
                width: 55px;
                height: 30px;
                line-height: 1.65;
                font-size: 12px;
                float: left;
                display: block;
                padding: 0 20px 0 8px;
                margin: 0;
                border: 1px solid #eee;
                border-radius: 0;
                background-color: #fff;
            }
            > p.detail-item-value {
                &.only-print-visible {
                    display: none;
                }
            }
            .adjustable-quantity {
                position: relative;
                vertical-align: middle;

                + .detail-item-unit {
                    vertical-align: middle;
                }
                + .only-print-visible + .detail-item-unit {
                    vertical-align: middle;
                }
                input[type=number]::-webkit-inner-spin-button,
                input[type=number]::-webkit-outer-spin-button {
                    -webkit-appearance: none;
                    margin: 0;
                }
                input[type=number] {
                    -moz-appearance: textfield;
                }
                input:focus {
                    outline: 0;
                }
                .adjustable-quantity-nav {
                    float: left;
                    position: relative;
                    height: 30px;
                }
                .adjustable-quantity-button {
                    position: relative;
                    cursor: pointer;
                    border-left: 1px solid #eee;
                    width: 20px;
                    text-align: center;
                    color: #333;
                    font-size: 14px;
                    font-weight: bold;
                    font-family: "Trebuchet MS", Helvetica, sans-serif !important;
                    line-height: 1;
                    transform: translateX(-100%);
                    user-select: none;

                    &:hover {
                        background-color: #eee;
                    }
                    &.adjustable-quantity-up {
                        position: absolute;
                        height: 50%;
                        top: 0;
                        border-bottom: 1px solid #eee;
                    }
                    &.adjustable-quantity-down {
                        position: absolute;
                        bottom: 0;
                        height: 50%;
                    }
                }
            }
		}
	}
	.recipe-card-ingredients {
		.ingredients-list {
			margin: 0;
			padding: 0;

            .ingredient-item-name {
                padding-left: 30px;
            }
		}
	}
	.recipe-card-image .wpzoom-recipe-card-print-link .btn-print-link i,
	.recipe-card-image .wpzoom-recipe-card-pinit .btn-pinit-link i {
        display: inline-block;
        text-indent: -9999px;
        width: 18px;
        height: 18px;
        background-size: 18px 18px;
        vertical-align: middle;
    }
    .recipe-card-image .wpzoom-recipe-card-print-link .btn-print-link i {
        background-image: url(assets/images/iconfinder_print_paper.svg);
    }
    .recipe-card-image .wpzoom-recipe-card-pinit .btn-pinit-link i {
        background-image: url(assets/images/iconfinder_pinterest.svg);
    }
    .hidden {
        display: none !important;
    }

	.recipe-card-directions + .footer-copyright {
        margin-top: 30px;
    }

    .recipe-card-directions .directions-list .direction-step-group {
    	counter-reset: count;
    	&::before {
	        content: '';
	        counter-increment: none;
        }
    }

	.direction-step img {
    	display: block;
    	clear: both;
    }

    .wpzoom-rating-stars-container {
        position: relative;
    	float: right;

    	-webkit-transition: opacity .25s linear;
    	-o-transition: opacity .25s linear;
    	transition: opacity .25s linear;

        .wpzoom-rating-stars-tooltip {
            display: block;
            opacity: 0;
            visibility: hidden;
            height: 0;
        }

    	&.is-loading {
	    	opacity: 0.7;
	    }
        &[data-user-can-rate="0"] {
            .wpzoom-rating-stars-tooltip {
                position: absolute;
                top: -100%;
                left: 0;
                background-color: rgba(0, 0, 0, 0.85);
                color: #fff;
                font-size: 13px;
                font-style: normal;
                padding: 3px 5px;
                border-radius: 3px;
                line-height: 1.4em;
                height: auto;
                transition: opacity .25s ease-in-out, visibility .25s ease-in-out;
            }
            .wpzoom-rating-stars {
                > li {
                    pointer-events: none;
                    cursor: none;
                }
                &:hover ~ .wpzoom-rating-stars-tooltip {
                    opacity: 1;
                    visibility: visible;
                }
            }
        }
    }
    &.header-content-align-center .wpzoom-rating-stars-container {
    	float: none;
    }
    ul.wpzoom-rating-stars {
    	list-style: none;
    	margin: 0;
    	padding: 0;
    	display: inline-block;

    	> li {
	    	display: inline-block;
	    	margin: 0;
	    	padding: 0;
	    	padding-right: 4px;
	    	cursor: pointer;
	    	color: inherit;

			&:last-child {
				padding-right: 0;
			}
	    	&.fa-star {
	    		color: #F2A123;
	    	}
	    	&.fa-star-o {
	    		color: #DBDBDB;
	    	}
	    }
    }
    .wpzoom-rating-stars-average {
    	color: #a0a0a0;
    	margin-left: 10px;
    	.wpzoom-rating-average,
    	.wpzoom-rating-total-votes {
    		font-weight: 500;
    	}
    	small {
    		font-size: 13px;
	    	margin-right: 4px;
	    }
    }
    .footer-copyright p {
        margin-bottom: 0;
        text-align: center;
        font-size: 12px;
        letter-spacing: 1px;
        text-transform: uppercase;
        color: #ababab;

        a {
            color: #222222;
            text-decoration: none;
            padding-bottom: 2px;
            border-bottom: 1px solid #eee;

            &:hover {
                ext-decoration: none;
                border-bottom-color: #ccc;
            }
        }
    }

    .recipe-card-cta-instagram,
    .recipe-card-cta-pinterest,
    .recipe-card-cta-facebook {
        padding: 15px;
        position: relative;
        padding-left: 6.2em;
        .cta-brand-icon {
            position: absolute;
            left: -10px;
            bottom: -10px;
            transform: rotate(-45deg);
            font-size: 6.2em;
            line-height: 1em;
            opacity: .35;

            i {
                font-style: normal;
            }
        }
        .cta-text-wrapper {
            .cta-text-title {
                margin-top: 0;
                margin-bottom: 0;
                font-size: 1.2em;
                line-height: 1.4em;
                color: inherit;
                text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.15);
            }
            .cta-text-subtitle {
                margin-bottom: 0;
                font-size: .85em;
                line-height: 1.6em;
                color: inherit;
                opacity: .8;
            }
            a {
                text-decoration: underline;
                font-weight: bold;
                color: inherit;
            }
        }
    }
    .recipe-card-directions + .recipe-card-cta-instagram,
    .recipe-card-directions + .recipe-card-cta-pinterest,
    .recipe-card-directions + .recipe-card-cta-facebook {
        margin-top: 20px;
    }
    .recipe-card-cta-instagram + .recipe-card-cta-pinterest,
    .recipe-card-cta-instagram + .recipe-card-cta-facebook,
    .recipe-card-cta-pinterest + .recipe-card-cta-facebook {
        margin-top: 20px;
    }

    .recipe-card-food-labels {
        @include margin( 10px 0 );
        .food-labels-list {
            @include reset-list;
            display: flex;
            flex-wrap: wrap;

            > li {
                flex: 0 0 12.5%;
                line-height: 0;
                list-style-type: none;
            }
        }
    }
    .recipe-card-notes + .recipe-card-food-labels {
        margin-top: -10px;
    }
}

@media screen and (max-width: 600px) {
    .wp-block-wpzoom-recipe-card-block-recipe-card {
        .wpzoom-rating-stars-container {
            float: none;
        }
    }
}

@import "./skins/snippets";
@import "./skins/default";
@import "./skins/newdesign";
@import "./skins/simple";

